[package]
name = "conveyor"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1.4.3", features = ["full"] }
alloy-sol-types = "1.5.2"
clap = { version = "4.5.54", features = ["derive", "env"] }
eyre = "0.6.12"
futures-util = "0.3.31"
hex = "0.4.3"
itertools = "0.14.0"
rand = "0.9.2"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
